[package]
name = "ukernel"
version = "0.1.0"
authors = ["Isitha Subasinghe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
tock-registers={ version="0.7.0", features=["register_types"] }
spin = "0.9.3"
lazy_static = {version="1.4.0", features=["spin_no_std"] }
derive_more = "0.99.17"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
